--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -5,6 +5,32 @@ THREEJS, VIDEOGROUND, ELECTRONJS, JS, VUEJS, LINUX
 This month I think the plan should be to stay in my lane with threejs for at least one more Month. During this time I should also work on my videoground project as that is closely related to doing so. With that said there is also the potential to write about other things to which videoground is based on, but For now I am thinking I should get as much out of the way with my blog post videos.
 
 
+<!-- ////////// //////////
+    WEEK 4
+/////////////// ///////-->
+## () - SUN 05/22/2022 to  SAT 05/28/2022
+
+Looks like beta world is very much going to still need to be on the back burner for now still sadly. New blog post videos, new blog posts on threejs, and editing of older threejs posts is what sees to be eating most of my time I am thinking this is what will continue this week as well. If I really want to move forward with the beta world idea I need to figure out what it is really about, and also how to promote it else it just makes more sense to stay the course.
+
+### () - SAT 05/28/2022
+
+### () - FRI 05/27/2022
+* () start post # 990 on threejs-
+
+### () - THU 05/26/2022
+* () videoground-blog-posts - threejs-vector3-lerp
+
+### () - WED 05/25/2022
+* () videoground-blog-posts - threejs-object3d-parent
+
+### () - TUE 05/24/2022
+* () start post # 989 on threejs-
+
+### () - MON 05/23/2022
+
+### () - SUN 05/22/2022
+* () videoground-blog-posts - threejs-userdata
+* () build and publish
 
 <!-- ////////// //////////
     WEEK 3
@@ -17,23 +43,18 @@ I should still try to focus on beta world this week, by starting at least one mo
 ### () - SAT 05/21/2022
 * () edit threejs-plane
 * () videoground-blog-posts - threejs-plane
-* () videoground-blog-posts - threejs-object3d-parent
-* () videoground-blog-posts - threejs-vector3-lerp
 * () videoground-beta-world - 
 * () hexo_sitesource - new header image
 
 
 ### () - FRI 05/20/2022
-* () edit threejs-userdata
-* () start post # 988 on threejs-example-object-grid-wrap
-
-* () videoground-blog-posts - threejs-userdata
-* () videoground-beta-world - 
+* (done) edit threejs-userdata
+* (done) start post # 988 on threejs-example-object-grid-wrap
+* (done) videoground-blog-posts - threejs-example-object-grid-wrap
 
 ### () - THU 05/19/2022
 * (done) edit threejs-object3d-parent
 * (done) videoground-blog-posts - threejs-buffer-geometry-attributes-normals
-* () videoground-beta-world - cubescape
 
 ### () - WED 05/18/2022
 * (done) edit threejs-object3d
