--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -42,6 +42,7 @@ I should still try to focus on beta world this week, by starting at least one mo
 
 ### () - SAT 05/21/2022
 * () edit threejs-plane
+* (done) edit threejs-example-object-grid-wrap
 * () videoground-blog-posts - threejs-plane
 * () videoground-beta-world - 
 * () hexo_sitesource - new header image
