--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -27,9 +27,10 @@ Looks like beta world is very much going to still need to be on the back burner 
 * () start post # 989 on threejs-
 
 ### () - MON 05/23/2022
+* () videoground-blog-posts - threejs-userdata
 
 ### () - SUN 05/22/2022
-* () videoground-blog-posts - threejs-userdata
+* (done) videoground-blog-posts - threejs-buffer-geometry-compute-vertex-normals
 * () build and publish
 
 <!-- ////////// //////////
@@ -41,12 +42,9 @@ I should still try to focus on beta world this week, by starting at least one mo
 
 
 ### () - SAT 05/21/2022
-* () edit threejs-plane
+* (done) edit threejs-plane
 * (done) edit threejs-example-object-grid-wrap
-* () videoground-blog-posts - threejs-plane
-* () videoground-beta-world - 
-* () hexo_sitesource - new header image
-
+* (done) videoground-blog-posts - threejs-plane
 
 ### () - FRI 05/20/2022
 * (done) edit threejs-userdata
