--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -27,11 +27,11 @@ Looks like beta world is very much going to still need to be on the back burner 
 * () start post # 989 on threejs-
 
 ### () - MON 05/23/2022
-* () videoground-blog-posts - threejs-userdata
+* (done) videoground-blog-posts - threejs-userdata
 
 ### () - SUN 05/22/2022
 * (done) videoground-blog-posts - threejs-buffer-geometry-compute-vertex-normals
-* () build and publish
+* (done) build and publish
 
 <!-- ////////// //////////
     WEEK 3
