--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -24,7 +24,7 @@ Looks like beta world is very much going to still need to be on the back burner 
 * () videoground-blog-posts - threejs-object3d-parent
 
 ### () - TUE 05/24/2022
-* () start post # 989 on threejs-
+* (done) start post # 989 on threejs-examples-weird-walk-three
 
 ### () - MON 05/23/2022
 * (done) videoground-blog-posts - threejs-userdata
