--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -13,15 +13,16 @@ This month I think the plan should be to stay in my lane with threejs for at lea
 Looks like beta world is very much going to still need to be on the back burner for now still sadly. New blog post videos, new blog posts on threejs, and editing of older threejs posts is what sees to be eating most of my time I am thinking this is what will continue this week as well. If I really want to move forward with the beta world idea I need to figure out what it is really about, and also how to promote it else it just makes more sense to stay the course.
 
 ### () - SAT 05/28/2022
+* () - 
 
 ### () - FRI 05/27/2022
 * () start post # 990 on threejs-
 
 ### () - THU 05/26/2022
-* () videoground-blog-posts - threejs-vector3-lerp
+* () - 
 
 ### () - WED 05/25/2022
-* () videoground-blog-posts - threejs-object3d-parent
+* (done) - edit threejs-examples-weird-walk-three
 
 ### () - TUE 05/24/2022
 * (done) start post # 989 on threejs-examples-weird-walk-three
