--- a/todo/today/todo_2022_05.md
+++ b/todo/today/todo_2022_05.md
@@ -4,6 +4,21 @@ THREEJS, VIDEOGROUND, ELECTRONJS, JS, VUEJS, LINUX
 
 This month I think the plan should be to stay in my lane with threejs for at least one more Month. During this time I should also work on my videoground project as that is closely related to doing so. With that said there is also the potential to write about other things to which videoground is based on, but For now I am thinking I should get as much out of the way with my blog post videos.
 
+<!-- ////////// //////////
+    WEEK 5
+/////////////// ///////-->
+## () - SUN 05/29/2022 to  TUE 05/31/2022
+
+For the last few days of the month the only item of concern that I have is new post #990 that I did not get around to last week. It might be a good idea to start thinking in terms of just one new post a week from here on out anyway. I have a lot of editing to do with the older posts on threejs, and I would also like to focus more so on actual video projects rather than the blog post videos I have made thus far.
+
+### () - TUE 05/31/2022
+* () start post # 990 on threejs-
+
+### () - MON 05/30/2022
+* () -
+
+### () - SUN 05/29/2022
+* () -
 
 <!-- ////////// //////////
     WEEK 4
@@ -16,7 +31,7 @@ Looks like beta world is very much going to still need to be on the back burner 
 * () - 
 
 ### () - FRI 05/27/2022
-* () start post # 990 on threejs-
+* () - 
 
 ### () - THU 05/26/2022
 * () - 
