--- a/todo/today/todo_2022_06.md
+++ b/todo/today/todo_2022_06.md
@@ -2,8 +2,18 @@
 
 VIDEOGROUND-BETAWORLD, VIDEOGROUND-BLOGPOSTS, VIDEOGROUND, THREEJS
 
-The general idea is to stay in my lane with threejs, and to focus more so on making videos rather than new posts and editing.
+The general idea is to stay in my lane with threejs, and to focus more so on making videos rather than new posts and editing. I will still want to work on editing my older posts on threejs, and also write at least one new post per week on threejs also. However I want to start to shift the bulk of my screen time in the direction of making video projects that are a little more engaging rather than just blog post demo videos.
 
 <!-- ////////// //////////
     WEEK 1
 /////////////// ///////-->
+
+## () - WED 06/01/2022 to  SAT 06/04/2022
+
+### () - SAT 06/04/2022
+
+### () - FRI 06/03/2022
+
+### () - THU 06/02/2022
+
+### () - WED 06/01/2022
