--- a/todo/today/todo_2022_06.md
+++ b/todo/today/todo_2022_06.md
@@ -8,15 +8,16 @@ The general idea is to stay in my lane with threejs, and to focus more so on mak
     WEEK 2
 /////////////// ///////-->
 
+I am going to try just focusing on one new blog post per week now. Outside of writing VIDEOS should come first and for most for now.
 
 ## () - SUN 06/05/2022 to  SAT 06/11/2022
 
-* (done) start new post #992
 
 
 ### () - SAT 06/05/2022
 
 ### () - FRI 06/05/2022
+* () start new post #992
 
 ### () - THU 06/05/2022
 
@@ -25,7 +26,7 @@ The general idea is to stay in my lane with threejs, and to focus more so on mak
 ### () - TUE 06/05/2022
 
 ### () - MON 06/05/2022
-* () edit post threejs-examples-lines-sphere-circles
+* (done) edit post threejs-examples-lines-sphere-circles
 * () video for threejs-examples-lines-sphere-circles
 
 
