--- a/todo/today/todo_2022_06.md
+++ b/todo/today/todo_2022_06.md
@@ -27,7 +27,8 @@ I am going to try just focusing on one new blog post per week now. Outside of wr
 
 ### () - MON 06/05/2022
 * (done) edit post threejs-examples-lines-sphere-circles
-* () video for threejs-examples-lines-sphere-circles
+* () work on r1 of threejs-examples-lines-sphere-circles
+* () start video for threejs-examples-lines-sphere-circles
 
 
 ### () - SUN 06/05/2022
