--- a/todo/today/todo_2022_06.md
+++ b/todo/today/todo_2022_06.md
@@ -17,9 +17,10 @@ I am going to try just focusing on one new blog post per week now. Outside of wr
 ### () - SAT 06/05/2022
 
 ### () - FRI 06/05/2022
-* () start new post #992
+* () start new post #992 on threejs-examples-lines-deterministic
 
 ### () - THU 06/05/2022
+* (done) fixed loss of context bug with new lines examples
 
 ### () - WED 06/05/2022
 
