--- a/todo/today/2022/todo_2022_05.md
+++ b/todo/today/2022/todo_2022_05.md
@@ -12,7 +12,7 @@ This month I think the plan should be to stay in my lane with threejs for at lea
 For the last few days of the month the only item of concern that I have is new post #990 that I did not get around to last week. It might be a good idea to start thinking in terms of just one new post a week from here on out anyway. I have a lot of editing to do with the older posts on threejs, and I would also like to focus more so on actual video projects rather than the blog post videos I have made thus far.
 
 ### () - TUE 05/31/2022
-* () start post # 990 on threejs-
+* () start post # 990 on threejs-examples-dae-tools-sphere-normals-invert
 
 ### () - MON 05/30/2022
 * () -
