--- a/todo/today/todo_2022_06.md
+++ b/todo/today/todo_2022_06.md
@@ -8,29 +8,29 @@ The general idea is to stay in my lane with threejs, and to focus more so on mak
     WEEK 2
 /////////////// ///////-->
 
-I am going to try just focusing on one new blog post per week now. Outside of writing VIDEOS should come first and for most for now.
-
 ## () - SUN 06/05/2022 to  SAT 06/11/2022
 
+Dealing with a major case of burnout so, I am going to try just focusing on one new blog post per week now. Outside of writing, VIDEOS should come first and for most for now I think.
 
+### () - SAT 06/11/2022
+* () edit threejs-examples-lines-deterministic
+* () videoground-blog-posts - threejs-examples-lines-deterministic
+* () videoground-blog-posts - threejs-examples-lines-sphere-circles
 
-### () - SAT 06/05/2022
+### () - FRI 06/10/2022
+* (done) start new post #992 on threejs-examples-lines-deterministic
 
-### () - FRI 06/05/2022
-* () start new post #992 on threejs-examples-lines-deterministic
-
-### () - THU 06/05/2022
+### () - THU 06/09/2022
 * (done) fixed loss of context bug with new lines examples
 
-### () - WED 06/05/2022
+### () - WED 06/08/2022
 
-### () - TUE 06/05/2022
+### () - TUE 06/07/2022
 
-### () - MON 06/05/2022
+### () - MON 06/06/2022
 * (done) edit post threejs-examples-lines-sphere-circles
 * () work on r1 of threejs-examples-lines-sphere-circles
 * () start video for threejs-examples-lines-sphere-circles
-
 
 ### () - SUN 06/05/2022
 
