--- a/todo/today/todo_2022_06.md
+++ b/todo/today/todo_2022_06.md
@@ -13,7 +13,7 @@ The general idea is to stay in my lane with threejs, and to focus more so on mak
 Dealing with a major case of burnout so, I am going to try just focusing on one new blog post per week now. Outside of writing, VIDEOS should come first and for most for now I think.
 
 ### () - SAT 06/11/2022
-* () edit threejs-examples-lines-deterministic
+* (done) edit threejs-examples-lines-deterministic
 * () videoground-blog-posts - threejs-examples-lines-deterministic
 * () videoground-blog-posts - threejs-examples-lines-sphere-circles
 
