--- a/todo/today/todo_2022_06.md
+++ b/todo/today/todo_2022_06.md
@@ -5,6 +5,15 @@ VIDEOGROUND-BETAWORLD, VIDEOGROUND-BLOGPOSTS, VIDEOGROUND, THREEJS
 The general idea is to stay in my lane with threejs, and to focus more so on making videos rather than new posts and editing. I will still want to work on editing my older posts on threejs, and also write at least one new post per week on threejs also. However I want to start to shift the bulk of my screen time in the direction of making video projects that are a little more engaging rather than just blog post demo videos.
 
 <!-- ////////// //////////
+    WEEK 3
+/////////////// ///////-->
+
+## () - SUN 06/12/2022 to  SAT 06/18/2022
+
+### () - SUN 06/12/2022
+* () edit threejs-examples-lines-deterministic
+
+<!-- ////////// //////////
     WEEK 2
 /////////////// ///////-->
 
