--- a/todo/today/todo_2022_06.md
+++ b/todo/today/todo_2022_06.md
@@ -10,8 +10,14 @@ The general idea is to stay in my lane with threejs, and to focus more so on mak
 
 ## () - SUN 06/12/2022 to  SAT 06/18/2022
 
+### () - TUE 06/14/2022
+
+### () - MON 06/13/2022
+
 ### () - SUN 06/12/2022
-* () edit threejs-examples-lines-deterministic
+* (done) edit threejs-examples-lines-deterministic
+* () videoground-blog-posts - threejs-examples-lines-deterministic
+* () videoground-blog-posts - threejs-examples-lines-sphere-circles
 
 <!-- ////////// //////////
     WEEK 2
@@ -23,8 +29,6 @@ Dealing with a major case of burnout so, I am going to try just focusing on one 
 
 ### () - SAT 06/11/2022
 * (done) edit threejs-examples-lines-deterministic
-* () videoground-blog-posts - threejs-examples-lines-deterministic
-* () videoground-blog-posts - threejs-examples-lines-sphere-circles
 
 ### () - FRI 06/10/2022
 * (done) start new post #992 on threejs-examples-lines-deterministic
