--- a/todo/today/todo_2022_06.md
+++ b/todo/today/todo_2022_06.md
@@ -25,10 +25,10 @@ I want to break free from the ushual process that I have been following for year
 
 ### () - TUE 06/14/2022
 * () work on threejs curve class demos
+* () videoground-blog-posts - threejs-examples-lines-deterministic
 
 ### () - MON 06/13/2022
-* () videoground-blog-posts - threejs-examples-lines-deterministic
-* () work on threejs curve class demos
+* (done) start videoground-blog-posts - threejs-examples-lines-deterministic
 
 ### () - SUN 06/12/2022
 * (done) edit threejs-examples-lines-deterministic
