--- a/todo/today/todo_2022_06.md
+++ b/todo/today/todo_2022_06.md
@@ -13,17 +13,26 @@ The general idea is to stay in my lane with threejs, and to focus more so on mak
 I want to break free from the ushual process that I have been following for years, and start a new over all plan this week. The main focus should be what the long term plan is when it comes to making videos. As for the writing from now on just one new blog post each firday, and I am going to want to be far more selective when it comes to editing.
 
 ### () - SAT 06/18/2022
+* () videoground-beta-world - 
 
 ### () - FRI 06/17/2022
+* () videoground-beta-world - 
+
 * start new post #993 on threejs-curve
 
 ### () - THU 06/16/2022
+* () videoground-beta-world - 
+
 * () work on threejs curve class demos
 
 ### () - WED 06/15/2022
+* () videoground-beta-world - 
+
 * () work on threejs curve class demos
 
 ### () - TUE 06/14/2022
+* () videoground-beta-world - Do naything with this for now
+
 * () work on threejs curve class demos
 * () videoground-blog-posts - threejs-examples-lines-deterministic
 
