--- a/todo/today/todo_2022_06.md
+++ b/todo/today/todo_2022_06.md
@@ -10,31 +10,21 @@ The general idea is to stay in my lane with threejs, and to focus more so on mak
 
 ## () - SUN 06/12/2022 to  SAT 06/18/2022
 
-I want to break free from the ushual process that I have been following for years, and start a new over all plan this week. The main focus should be what the long term plan is when it comes to making videos. As for the writing from now on just one new blog post each firday, and I am going to want to be far more selective when it comes to editing.
+I want to break free from the ushual process that I have been following for years, and start a new over all plan this week. The main focus should be what the long term plan is when it comes to making videos. As for the writing from now on just one new blog post each firday, and I am going to want to be far more selective when it comes to editing. I am still also dealing with burn out, so once again I do not thing I am going to be doing much this week.
 
 ### () - SAT 06/18/2022
 * () videoground-beta-world - 
 
 ### () - FRI 06/17/2022
 * () videoground-beta-world - 
-
-* start new post #993 on threejs-curve
+* () start new post #993 on threejs-curve
 
 ### () - THU 06/16/2022
-* () videoground-beta-world - 
-
-* () work on threejs curve class demos
 
 ### () - WED 06/15/2022
-* () videoground-beta-world - 
-
-* () work on threejs curve class demos
 
 ### () - TUE 06/14/2022
-* () videoground-beta-world - Do naything with this for now
-
-* () work on threejs curve class demos
-* () videoground-blog-posts - threejs-examples-lines-deterministic
+* (done) videoground-beta-world - Do anything with this for now
 
 ### () - MON 06/13/2022
 * (done) start videoground-blog-posts - threejs-examples-lines-deterministic
