--- a/todo/today/todo_2022_06.md
+++ b/todo/today/todo_2022_06.md
@@ -5,12 +5,27 @@ VIDEOGROUND-BETAWORLD, VIDEOGROUND-BLOGPOSTS, VIDEOGROUND, THREEJS
 The general idea is to stay in my lane with threejs, and to focus more so on making videos rather than new posts and editing. I will still want to work on editing my older posts on threejs, and also write at least one new post per week on threejs also. However I want to start to shift the bulk of my screen time in the direction of making video projects that are a little more engaging rather than just blog post demo videos.
 
 <!-- ////////// //////////
+    WEEK 5
+/////////////// ///////-->
+
+## () - SUN 06/26/2022 to  THU 06/30/2022
+
+### () - THU 06/18/2022
+* videoground-blog-posts - threejs-curve
+* build and publish
+
+
+<!-- ////////// //////////
+    WEEK 4
+/////////////// ///////-->
+
+<!-- ////////// //////////
     WEEK 3
 /////////////// ///////-->
 
 ## () - SUN 06/12/2022 to  SAT 06/18/2022
 
-I want to break free from the ushual process that I have been following for years, and start a new over all plan this week. The main focus should be what the long term plan is when it comes to making videos. As for the writing from now on just one new blog post each firday, and I am going to want to be far more selective when it comes to editing. I am still also dealing with burn out, so once again I do not thing I am going to be doing much this week.
+I want to break free from the usual process that I have been following for years, and start a new over all plan this week. The main focus should be what the long term plan is when it comes to making videos. As for the writing from now on just one new blog post each Friday, and I am going to want to be far more selective when it comes to editing. I am still also dealing with burn out, so once again I do not thing I am going to be doing much this week.
 
 ### () - SAT 06/18/2022
 * () videoground-beta-world - weird-face-1
