--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -5,3 +5,10 @@ VIDEOGROUND, VIDEOGROUND-BETAWORLD, VIDEOGROUND-BLOG-POSTS, THREEJS
 <!-- ////////// //////////
     WEEK 1
 /////////////// ///////-->
+
+## () - FRI 07/01/2022 to  SAT 07/02/2022
+
+### () - FRI 07/01/2022
+
+* () threejs demos - start new demo folder for weird face project
+* () start new post #994 on threejs-examples-weird-face-one
