--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -10,5 +10,8 @@ VIDEOGROUND, VIDEOGROUND-BETAWORLD, VIDEOGROUND-BLOG-POSTS, THREEJS
 
 ### () - FRI 07/01/2022
 
-* () threejs demos - start new demo folder for weird face project
-* () start new post #994 on threejs-examples-weird-face-one
+* (done) threejs demos - start new demo folder for weird face project
+* (done) threejs demos - start new demo folder for weird face mouth move
+* (done) threejs demos - start new demo folder for lerp geo
+* (done) threejs forpost - start new lerp geo for post folder
+* () start new post #994 on threejs-examples-lerp-geo
