--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -8,10 +8,14 @@ VIDEOGROUND, VIDEOGROUND-BETAWORLD, VIDEOGROUND-BLOG-POSTS, THREEJS
 
 ## () - FRI 07/01/2022 to  SAT 07/02/2022
 
-### () - FRI 07/01/2022
+### () - FRI 07/02/2022
+* edit threejs-examples-lerp-geo
+* edit threejs-examples
+* remove old ga code as it is not used any more in hexo sitesource
 
+### () - FRI 07/01/2022
 * (done) threejs demos - start new demo folder for weird face project
 * (done) threejs demos - start new demo folder for weird face mouth move
 * (done) threejs demos - start new demo folder for lerp geo
 * (done) threejs forpost - start new lerp geo for post folder
-* () start new post #994 on threejs-examples-lerp-geo
+* (done) start new post #994 on threejs-examples-lerp-geo
