--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -3,15 +3,40 @@
 VIDEOGROUND, VIDEOGROUND-BETAWORLD, VIDEOGROUND-BLOG-POSTS, THREEJS
 
 <!-- ////////// //////////
+    WEEK 2
+/////////////// ///////-->
+
+## () - SUN 07/03/2022 to  SAT 07/09/2022
+
+### () - SAT 07/09/2022
+
+### () - FRI 07/08/2022
+* () start new post #995 on threejs-examples-werid-face-one
+
+### () - THU 07/07/2022
+
+### () - WED 07/06/2022
+
+### () - TUE 07/05/2022
+
+### () - MON 07/04/2022
+* () test-threejs: guy one proto
+* () remove old ga code as it is not used any more in hexo site source
+
+### () - SUN 07/03/2022
+* () edit threejs-examples-lerp-geo
+* () test-threejs: werid face proto
+
+<!-- ////////// //////////
     WEEK 1
 /////////////// ///////-->
 
 ## () - FRI 07/01/2022 to  SAT 07/02/2022
 
-### () - FRI 07/02/2022
-* edit threejs-examples-lerp-geo
-* edit threejs-examples
-* remove old ga code as it is not used any more in hexo sitesource
+### () - SAT 07/02/2022
+* (done) edit threejs-examples-lerp-geo
+* (done) edit threejs-examples
+* () test-threejs: werid face proto
 
 ### () - FRI 07/01/2022
 * (done) threejs demos - start new demo folder for weird face project
