--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -2,6 +2,33 @@
 
 VIDEOGROUND, VIDEOGROUND-BETAWORLD, VIDEOGROUND-BLOG-POSTS, THREEJS
 
+Dealing with some intense personal problems when it comes to things outside of this that are eating up the bulk of my time and energy. chances are I will not be getting much done this month.
+
+<!-- ////////// //////////
+    WEEK 3
+/////////////// ///////-->
+
+## () - SUN 07/10/2022 to  SAT 07/16/2022
+
+I have been out of it lately because of life drama, and various personal distractions that I do not care to get into detail here. For now I think that any amount of work that I get done at all this week is still better than nothing at all as that is the kind of state that I am still in at this time.
+
+### () - SAT 07/16/2022
+* () edit threejs-examples-grid-wrap-land
+* () edit threejs-examples-weird-face-one
+* () remove old ga code as it is not used any more in hexo site source
+
+### () - FRI 07/15/2022
+* () start new post #996 on threejs-examples-object-grid-wrap-land
+* () edit threejs-examples-weird-face-one
+
+### () - THU 07/14/2022
+* () edit threejs-examples-weird-face-one
+* () start for post folder for threejs-examples-object-grid-wrap-land
+
+### () - WED 07/13/2022
+* (done) work on new object-grid-wrap demo
+* (done) edit threejs-examples-weird-face-one
+
 <!-- ////////// //////////
     WEEK 2
 /////////////// ///////-->
@@ -11,7 +38,7 @@ VIDEOGROUND, VIDEOGROUND-BETAWORLD, VIDEOGROUND-BLOG-POSTS, THREEJS
 ### () - SAT 07/09/2022
 
 ### () - FRI 07/08/2022
-* () start new post #995 on threejs-examples-werid-face-one
+* (done) start new post #995 on threejs-examples-weird-face-one
 
 ### () - THU 07/07/2022
 
@@ -21,7 +48,6 @@ VIDEOGROUND, VIDEOGROUND-BETAWORLD, VIDEOGROUND-BLOG-POSTS, THREEJS
 
 ### () - MON 07/04/2022
 * () test-threejs: guy one proto
-* () remove old ga code as it is not used any more in hexo site source
 
 ### () - SUN 07/03/2022
 * () edit threejs-examples-lerp-geo
