--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -22,6 +22,7 @@ I have been out of it lately because of life drama, and various personal distrac
 * () edit threejs-examples-weird-face-one
 
 ### () - THU 07/14/2022
+* (done) edit threejs-examples-lerp-geo
 * () edit threejs-examples-weird-face-one
 * () start for post folder for threejs-examples-object-grid-wrap-land
 
