--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -23,7 +23,7 @@ I have been out of it lately because of life drama, and various personal distrac
 
 ### () - THU 07/14/2022
 * (done) edit threejs-examples-lerp-geo
-* () edit threejs-examples-weird-face-one
+* (done) edit threejs-examples-weird-face-one
 * (done) start for post folder for threejs-examples-object-grid-wrap-land
 
 ### () - WED 07/13/2022
