--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -18,8 +18,8 @@ I have been out of it lately because of life drama, and various personal distrac
 * () remove old ga code as it is not used any more in hexo site source
 
 ### () - FRI 07/15/2022
-* () start new post #996 on threejs-examples-object-grid-wrap-land
-* () edit threejs-examples-weird-face-one
+* (done) start new post #996 on threejs-examples-object-grid-wrap-land
+* (done) edit threejs-examples-weird-face-one
 
 ### () - THU 07/14/2022
 * (done) edit threejs-examples-lerp-geo
