--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -5,6 +5,34 @@ VIDEOGROUND, VIDEOGROUND-BETAWORLD, VIDEOGROUND-BLOG-POSTS, THREEJS
 Dealing with some intense personal problems when it comes to things outside of this that are eating up the bulk of my time and energy. chances are I will not be getting much done this month.
 
 <!-- ////////// //////////
+    WEEK 4
+/////////////// ///////-->
+
+## () - SUN 07/17/2022 to  SAT 07/23/2022
+
+### () - SAT 07/23/2022
+### () - FRI 07/22/2022
+* (done) start new post #997 on threejs-examples-
+
+### () - THU 07/21/2022
+
+### () - WED 07/20/2022
+
+### () - TUE 07/19/2022
+
+### () - MON 07/18/2022
+* () finish up with r1 of threejs-examples-object-grid-wrap-land
+* () edit post on threejs-examples-object-grid-wrap-land
+* () edit threejs-examples-object-grid-wrap
+* () edit threejs-examples-object-werid-face-one
+
+* () new blog post video for threejs-examples-object-grid-wrap-land
+* () build and publish
+
+### () - SUN 07/17/2022
+* (done) work on threejs-examples-object-grid-wrap-land r1
+
+<!-- ////////// //////////
     WEEK 3
 /////////////// ///////-->
 
