--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -21,7 +21,7 @@ Dealing with some intense personal problems when it comes to things outside of t
 ### () - TUE 07/19/2022
 
 ### () - MON 07/18/2022
-* () finish up with r1 of threejs-examples-object-grid-wrap-land
+* (done) finish up with r1 of threejs-examples-object-grid-wrap-land
 * () edit post on threejs-examples-object-grid-wrap-land
 * () edit threejs-examples-object-grid-wrap
 * () edit threejs-examples-object-werid-face-one
