--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -19,15 +19,17 @@ Dealing with some intense personal problems when it comes to things outside of t
 ### () - WED 07/20/2022
 
 ### () - TUE 07/19/2022
-
-### () - MON 07/18/2022
-* (done) finish up with r1 of threejs-examples-object-grid-wrap-land
 * () edit post on threejs-examples-object-grid-wrap-land
 * () edit threejs-examples-object-grid-wrap
 * () edit threejs-examples-object-werid-face-one
-
-* () new blog post video for threejs-examples-object-grid-wrap-land
 * () build and publish
+
+* () start new threejs proto
+* () start new videoground-build-stuff repo with first dae folder being a raspberry pi top case
+
+### () - MON 07/18/2022
+* (done) finish up with r1 of threejs-examples-object-grid-wrap-land
+* (done) new blog post video for threejs-examples-object-grid-wrap-land
 
 ### () - SUN 07/17/2022
 * (done) work on threejs-examples-object-grid-wrap-land r1
