--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -11,6 +11,7 @@ Dealing with some intense personal problems when it comes to things outside of t
 ## () - SUN 07/17/2022 to  SAT 07/23/2022
 
 ### () - SAT 07/23/2022
+
 ### () - FRI 07/22/2022
 * (done) start new post #997 on threejs-examples-
 
@@ -19,11 +20,10 @@ Dealing with some intense personal problems when it comes to things outside of t
 ### () - WED 07/20/2022
 
 ### () - TUE 07/19/2022
-* () edit post on threejs-examples-object-grid-wrap-land
+* (done) edit post on threejs-examples-object-grid-wrap-land
 * () edit threejs-examples-object-grid-wrap
 * () edit threejs-examples-object-werid-face-one
 * () build and publish
-
 * () start new threejs proto
 * () start new videoground-build-stuff repo with first dae folder being a raspberry pi top case
 
