--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -21,7 +21,7 @@ Dealing with some intense personal problems when it comes to things outside of t
 
 ### () - TUE 07/19/2022
 * (done) edit post on threejs-examples-object-grid-wrap-land
-* () edit threejs-examples-object-weird-face-one
+* (done) edit threejs-examples-object-weird-face-one
 * () edit threejs-examples-object-grid-wrap
 * () build and publish
 
