--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -12,18 +12,30 @@ Dealing with some intense personal problems when it comes to things outside of t
 
 ### () - SAT 07/23/2022
 
+* () start new videoground-build-stuff
+
 ### () - FRI 07/22/2022
 * (done) start new post #997 on threejs-examples-
 
+* () start new videoground-build-stuff
+
 ### () - THU 07/21/2022
 
+* () start new videoground-build-stuff
+
 ### () - WED 07/20/2022
+* () edit threejs-
+* () remove old ga code as it is not used any more in hexo site source
+* () build and publish
+
+* () new blog post video
+* () start new videoground-build-stuff 
 
 ### () - TUE 07/19/2022
 * (done) edit post on threejs-examples-object-grid-wrap-land
 * (done) edit threejs-examples-object-weird-face-one
 * () edit threejs-examples-object-grid-wrap
-* () build and publish
+
 
 * () start new threejs proto
 * () start new videoground-build-stuff repo with first dae folder being a raspberry pi top case
@@ -44,9 +56,6 @@ Dealing with some intense personal problems when it comes to things outside of t
 I have been out of it lately because of life drama, and various personal distractions that I do not care to get into detail here. For now I think that any amount of work that I get done at all this week is still better than nothing at all as that is the kind of state that I am still in at this time.
 
 ### () - SAT 07/16/2022
-* () edit threejs-examples-grid-wrap-land
-* () edit threejs-examples-weird-face-one
-* () remove old ga code as it is not used any more in hexo site source
 
 ### () - FRI 07/15/2022
 * (done) start new post #996 on threejs-examples-object-grid-wrap-land
