--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -24,7 +24,7 @@ Dealing with some intense personal problems when it comes to things outside of t
 * () start new videoground-build-stuff
 
 ### () - WED 07/20/2022
-* () edit threejs-
+* () edit threejs-examples-object-grid-wrap - link to land module - expand and proof read
 * () remove old ga code as it is not used any more in hexo site source
 * () build and publish
 
@@ -34,7 +34,7 @@ Dealing with some intense personal problems when it comes to things outside of t
 ### () - TUE 07/19/2022
 * (done) edit post on threejs-examples-object-grid-wrap-land
 * (done) edit threejs-examples-object-weird-face-one
-* () edit threejs-examples-object-grid-wrap
+* (done) edit threejs-examples-object-grid-wrap
 
 
 * () start new threejs proto
