--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -29,16 +29,13 @@ Dealing with some intense personal problems when it comes to things outside of t
 * () build and publish
 
 * () new blog post video
-* () start new videoground-build-stuff 
+* () start new threejs proto folder
+* () start new test-threejs DAE of a computer case
 
 ### () - TUE 07/19/2022
 * (done) edit post on threejs-examples-object-grid-wrap-land
 * (done) edit threejs-examples-object-weird-face-one
 * (done) edit threejs-examples-object-grid-wrap
-
-
-* () start new threejs proto
-* () start new videoground-build-stuff repo with first dae folder being a raspberry pi top case
 
 ### () - MON 07/18/2022
 * (done) finish up with r1 of threejs-examples-object-grid-wrap-land
