--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -24,11 +24,13 @@ Dealing with some intense personal problems when it comes to things outside of t
 * () start new videoground-build-stuff
 
 ### () - WED 07/20/2022
+* () new blog post video on threejs-color
+* () edit threejs-color
 * () edit threejs-examples-object-grid-wrap - link to land module - expand and proof read
+
 * () remove old ga code as it is not used any more in hexo site source
 * () build and publish
 
-* () new blog post video
 * () start new threejs proto folder
 * () start new test-threejs DAE of a computer case
 
