--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -26,6 +26,7 @@ Dealing with some intense personal problems when it comes to things outside of t
 ### () - WED 07/20/2022
 * () new blog post video on threejs-color
 * () edit threejs-color
+* () edit threejs-data-textures
 * () edit threejs-examples-object-grid-wrap - link to land module - expand and proof read
 
 * () remove old ga code as it is not used any more in hexo site source
