--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -18,19 +18,22 @@ Dealing with some intense personal problems when it comes to things outside of t
 * (done) start new post #997 on threejs-examples-
 
 * () start new videoground-build-stuff
+* () build and publish
 
 ### () - THU 07/21/2022
 
 * () start new videoground-build-stuff
 
 ### () - WED 07/20/2022
+* (done) edit threejs-color
+* (done) edit threejs-examples-object-grid-wrap - link to land module - expand and proof read
+* (done) edit threejs-data-textures
+
 * () new blog post video on threejs-color
-* () edit threejs-color
-* () edit threejs-data-textures
-* () edit threejs-examples-object-grid-wrap - link to land module - expand and proof read
+
 
 * () remove old ga code as it is not used any more in hexo site source
-* () build and publish
+
 
 * () start new threejs proto folder
 * () start new test-threejs DAE of a computer case
