--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -28,9 +28,8 @@ Dealing with some intense personal problems when it comes to things outside of t
 * (done) edit threejs-color
 * (done) edit threejs-examples-object-grid-wrap - link to land module - expand and proof read
 * (done) edit threejs-data-textures
-
-* () new blog post video on threejs-color
-
+* (done) new blog post video on threejs-color
+* () embed video in theejs-color
 
 * () remove old ga code as it is not used any more in hexo site source
 
