--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -29,7 +29,7 @@ Dealing with some intense personal problems when it comes to things outside of t
 * (done) edit threejs-examples-object-grid-wrap - link to land module - expand and proof read
 * (done) edit threejs-data-textures
 * (done) new blog post video on threejs-color
-* () embed video in theejs-color
+* (done) embed video in theejs-color
 
 * () remove old ga code as it is not used any more in hexo site source
 
