--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -15,14 +15,16 @@ Dealing with some intense personal problems when it comes to things outside of t
 * () start new videoground-build-stuff
 
 ### () - FRI 07/22/2022
-* (done) start new post #997 on threejs-examples-
+* (done) start new post #997 on threejs-capsule-geometry
 
 * () start new videoground-build-stuff
 * () build and publish
 
 ### () - THU 07/21/2022
-
-* () start new videoground-build-stuff
+* () edit threejs-
+* () start new threejs capsule-geometry-as-tube demo folder
+* () remove old ga code as it is not used any more in hexo site source
+* () work on DAE file of computer case
 
 ### () - WED 07/20/2022
 * (done) edit threejs-color
@@ -30,11 +32,7 @@ Dealing with some intense personal problems when it comes to things outside of t
 * (done) edit threejs-data-textures
 * (done) new blog post video on threejs-color
 * (done) embed video in theejs-color
-
-* () remove old ga code as it is not used any more in hexo site source
-
-
-* () start new threejs proto folder
+* (done) start new threejs capsule-geometry folder that can serve as a basic example for a post on the subject
 * () start new test-threejs DAE of a computer case
 
 ### () - TUE 07/19/2022
