--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -24,7 +24,7 @@ Dealing with some intense personal problems when it comes to things outside of t
 * () edit threejs-
 * () start new threejs capsule-geometry-as-tube demo folder
 * () remove old ga code as it is not used any more in hexo site source
-* () work on DAE file of computer case
+* () work on DAE file folder project
 
 ### () - WED 07/20/2022
 * (done) edit threejs-color
@@ -33,7 +33,7 @@ Dealing with some intense personal problems when it comes to things outside of t
 * (done) new blog post video on threejs-color
 * (done) embed video in theejs-color
 * (done) start new threejs capsule-geometry folder that can serve as a basic example for a post on the subject
-* () start new test-threejs DAE of a computer case
+* (done) start new test-threejs DAE folder for a computer case
 
 ### () - TUE 07/19/2022
 * (done) edit post on threejs-examples-object-grid-wrap-land
