--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -21,7 +21,11 @@ Dealing with some intense personal problems when it comes to things outside of t
 * () build and publish
 
 ### () - THU 07/21/2022
-* () edit threejs-
+
+* () for post folder for threejs-examples-screen-shake
+* () new blog post video for threejs-examples-screen-shake
+* () edit threejs-examples-screen-shake
+
 * () start new threejs capsule-geometry-as-tube demo folder
 * () remove old ga code as it is not used any more in hexo site source
 * () work on DAE file folder project
