--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -15,15 +15,15 @@ Dealing with some intense personal problems when it comes to things outside of t
 * () start new videoground-build-stuff
 
 ### () - FRI 07/22/2022
-* (done) start new post #997 on threejs-capsule-geometry
+* () start new post #997 on threejs-capsule-geometry
 
 * () start new videoground-build-stuff
 * () build and publish
 
 ### () - THU 07/21/2022
 
-* () for post folder for threejs-examples-scene-shake
-* () new blog post video for threejs-examples-scene-shake
+* (done) for post folder for threejs-examples-scene-shake
+* (done) new blog post video for threejs-examples-scene-shake
 * () edit threejs-examples-scene-shake
 
 * () start new threejs capsule-geometry-as-tube demo folder
