--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -15,19 +15,20 @@ Dealing with some intense personal problems when it comes to things outside of t
 * () start new videoground-build-stuff
 
 ### () - FRI 07/22/2022
+* () for post folder for threejs-capsule-geometry
 * () start new post #997 on threejs-capsule-geometry
-
-* () start new videoground-build-stuff
+* () remove old ga code as it is not used any more in hexo site source
 * () build and publish
+
+* () work on DAE file folder project
 
 ### () - THU 07/21/2022
 
 * (done) for post folder for threejs-examples-scene-shake
 * (done) new blog post video for threejs-examples-scene-shake
-* () edit threejs-examples-scene-shake
+* (done) edit threejs-examples-scene-shake
 
 * () start new threejs capsule-geometry-as-tube demo folder
-* () remove old ga code as it is not used any more in hexo site source
 * () work on DAE file folder project
 
 ### () - WED 07/20/2022
