--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -12,7 +12,7 @@ Dealing with some intense personal problems when it comes to things outside of t
 
 ### () - SAT 07/23/2022
 
-* () start new videoground-build-stuff
+* () work on DAE file folder project
 
 ### () - FRI 07/22/2022
 * () for post folder for threejs-capsule-geometry
