--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -19,6 +19,8 @@ Dealing with some intense personal problems when it comes to things outside of t
 * () start new post #997 on threejs-capsule-geometry
 * () remove old ga code as it is not used any more in hexo site source
 * () build and publish
+
+* () cerate new find vector midpoint demo folder ( var mv = v.add(nv).divideScalar(2); )
 * () work on DAE file folder project
 
 ### () - THU 07/21/2022
