--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -16,7 +16,7 @@ Dealing with some intense personal problems when it comes to things outside of t
 
 ### () - FRI 07/22/2022
 * () for post folder for threejs-capsule-geometry
-* () start new post #997 on threejs-capsule-geometry
+* (done) start new post #997 on threejs-capsule-geometry
 * () remove old ga code as it is not used any more in hexo site source
 * () build and publish
 
