--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -15,8 +15,11 @@ Dealing with some intense personal problems when it comes to things outside of t
 * () work on DAE file folder project
 
 ### () - FRI 07/22/2022
-* () for post folder for threejs-capsule-geometry
+* (done) new s3 ani loop section in for post folder for threejs-capsule-geometry
 * (done) start new post #997 on threejs-capsule-geometry
+
+* () video for threejs-capsule-geometry
+
 * () remove old ga code as it is not used any more in hexo site source
 * () build and publish
 
